Fix iOS/Mac overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,7 @@ body {
   display: block;
   position: absolute;
   min-width: 100vw;
+  max-width: 100vw;
   overflow-x: hidden;
 }
 
